scss/components/_footer.scss
.footer__container {
  display: flex;
  flex-wrap: wrap;
  background-color: $text-color;
  // padding: 2rem 5%;
  text-align: center;

  @include respond-above(large) {
    text-align: left;
  }

  ul {
    margin: 0;
    padding: 0;
  }
}

.footer__final {
  width: 100%;
  box-sizing: border-box;
  padding: 2rem;
  display: flex;
  flex-wrap: wrap;
}

.footer__contact {
  flex-basis: 100%;
  padding-top: 2rem;
  order: 3;
  box-sizing: border-box;

  p, a {
    @extend %sans-serif;
    color: $pop-color;
  }

  a,
  a:hover,
  a:visited {
    text-decoration: none;
    border-bottom: none;
  }

  @include respond-above(large) {
    padding-right: 2rem;
    padding-top: 0;
    order: 2;
  }

  @include respond-above(large) {
    flex-basis: 25%;
  }

  @include respond-above(huge) {
    flex-basis: calc(100% / 6);
    padding: 2rem 4rem 2rem 0;
  }
}

.footer__logo {
  width: 50%;
  box-sizing: border-box;
  order: 4;
  margin: 0 auto;
  padding-top: 2rem;

  @include respond-above(large) {
    padding: 0;
    margin-top: 0;
    width: 25%;
    order: 1;
  }
}

.footer__logo--simplified {
  display: block;
  @include respond-above(large) {
    display: none;
  }
}

.footer__logo--full {
  display: none;
  @include respond-above(large) {
    display: block;
  }
}

.footer__logo svg {
  max-width: 50px;
  margin: 0 auto;

  path {
    fill: $pop-color;
  }

  @include respond-above(large) {
    margin: 0;
    max-width: 200px;
  }
}

.footer__info {
  p {
    color: $pop-color;
    @extend %sans-serif;
    @include text-size($sans-s);
    font-weight: bold;

    & + p {
      margin-top: 0.5rem;
    }
  }

  a {
    color: $pop-color;
    border-bottom: none;

    &:hover {
      color: $background-color;
    }
  }
}

.footer__social-links {
  width: 100%;
  order: 1;

  @include respond-above(large) {
    width: 25%;
    order: 3;
  }
}

.footer__social-links ul {
  list-style: none;
}

.footer__social-link,
.footer__social-link a {
  @extend %sans-serif;
  color: $pop-color;

  &:hover {
    color: $pop-color;
  }
}

.footer__sections {
  background-color: $pop-color;
  flex-basis: 100%;
  display: flex;
  flex-wrap: wrap;
  padding: 2rem;
  text-algin: center;

  @include respond-above(small) {
    text-align: left;
  }
}

.footer__section-container {
  flex-basis: 100%;
  box-sizing: border-box;

  @include respond-above(small) {
    flex-basis: 50%;
  }

  @include respond-above(medium) {
    flex-basis: 33%;
    padding-right: 1rem;
  }

  @include respond-above(large) {
    flex-basis: 20%;
  }

  @include respond-above(huge) {
    padding-right: 4rem;
  }
}

.footer__title {
  color: $text-color;
  @extend %sans-serif;
  font-weight: bold;
  margin-top: 2rem;
  text-transform: uppercase;
}

.footer__pages {
  list-style: none;
}

.footer__subtitle {
  @extend %sans-serif;
  font-weight: bold;
  margin-top: 0.5rem;

  @include respond-above(small) {
    margin-right: 1rem;
  }

  a {
    color: $text-color;
    border-bottom: none;

    &:hover {
      color: $background-color;
    }
  }
}

.footer__external-links {
  flex-basis: 100%;
  color: $pop-color;
  order: 1;

  @include respond-above(large) {
    flex-basis: 25%;
    order: 4;
  }

  @include respond-above(huge) {
    flex-basis: calc(100% / 6);
  }
}

.footer__external-links ul {
  list-style: none;
  padding-top: 0.5rem;
}

.footer__external-links .footer__title {
  color: $pop-color;
  text-transform: uppercase;

  @include respond-above(large) {
    margin-top: 0;
  }
}

.footer__external-link,
.footer__external-link a {
  @extend %sans-serif;
  color: $pop-color;
}

